--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,97 @@
-.App {
-  text-align: center;
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  font-size: 20px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(128, 128, 128, 0.548);
+}
+
+
+.signin{
+
+  width: 400px;
+  height: 50px;
+  /* border: 2px solid white; */
+  background-color: rgba(10, 235, 10, 0.863);
+  text-align: center;
+  padding: 5px;
+  color: green;
+  font-weight: bold;
+  font-size: 25px;
+}
+
+form{
+  border: 2px solid white;
+  height: 530px;
+  width: 400px;
+
+  padding: 25px;
+  
+  border-radius: 5px;
+  background-color: white;
+
+}
+
+.seperator{
+  width: 90%;
+  height: 2px;
+  background-color: gray;
+  margin: 15px 0;
+}
+
+.form{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: 5px;
+}
+
+.field{
+  height: 90px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+label{
+  font-size: 20px;
+  font-weight: bold;
+}
+
+input , button{
+  width: 90%;
+  height: 50px;
+  
+  font-size: 20px;
+  padding: 10px;
+
+  outline: none;
+  border-radius: 5px;
+  border: 1px solid gray;
+
+}
+
+button{
+  border: none;
+  background-color: blue;
   color: white;
+  cursor: pointer;
+  font-size: 25px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+span{
+  font-size: 15px;
+  font-weight: bold;
+  color: red;
 }
